@@ -47,7 +47,7 @@
    "provides" : {
       "Catmandu::AlephX" : {
          "file" : "lib/Catmandu/AlephX.pm",
-         "version" : "1.062"
+         "version" : "1.063"
       },
       "Catmandu::AlephX::Metadata" : {
          "file" : "lib/Catmandu/AlephX/Metadata.pm"
@@ -160,5 +160,5 @@
          "http://dev.perl.org/licenses/"
       ]
    },
-   "version" : "1.062"
+   "version" : "1.063"
 }
