@@ -1,1 +1,2 @@
+2014-04-15  version 1.063   skip deleted records in Catmandu::Store::AlephX
 2013-04-12  reference to Catmandu::AlephX::Op::Renew resolved
